# vinum

./: .gitignore  AUTHORS  Makefile.am  README.md  config.h  configure.ac  meson.build  out.html  out.txt  test.vinum  test_maju.vin
.github/workflows/: build-vinumc.yml
doc/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
docs/: CONTRIBUTING.md  SECURITY.md  library_development.md  vinum.md
lib/: library_api.h  test_lib.c
src/: Makefile.am  ast.c  ast.h  ast_bison_helpers.c  ast_bison_helpers.h  dry_bison.y  dry_flex.l  eval.c  eval.h  extern_library_helper.c  extern_library_helper.h  parser_common.c  parser_common.h  sweet_bison.h  sweet_bison.y  sweet_flex.l  sweet_vinumc.c  sweet_vinumc.h  vec.h  vin2dot  vin2dot.c  vinumc.c  vinumc.h
src/tests/: Makefile.am  error_handling_test.c  simple_test.c  vunit.c  vunit.h
subprojects/stdlib/: README.md  library_api.h  meson.build  stdlib.c
subprojects/vinumc/: README.md  ast.c  ast.h  dry_bison.y  eval.c  eval.h  extern_library.c  extern_library_helper.c  extern_library_helper.h  meson.build  meson.options  vin2dot.c  vinumc.c  vinumc.h
subprojects/vinumc/include/: extern_library.h
subprojects/vinumc/tests/: library_test.c  meson.build  simple_test.c
subprojects/vunit/: README.md  meson.build  vunit.c
subprojects/vunit/include/: vunit.h
